// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switcher spanpshot collection is Switcher render right if value set True and False? 1`] = `
<div>
  <div
    class="switcher-wrapper active"
  >
    <div
      class="switcher-handle"
    />
  </div>
  <span
    class="switcher-label"
  >
    Switch
  </span>
</div>
`;

exports[`Switcher spanpshot collection is Switcher render right if value set True and False? 2`] = `
<div>
  <div
    class="switcher-wrapper"
  >
    <div
      class="switcher-handle"
    />
  </div>
  <span
    class="switcher-label"
  >
    Switch
  </span>
</div>
`;

exports[`Switcher spanpshot collection is Switcher render right? 1`] = `
<div>
  <div
    class="switcher-wrapper"
  >
    <div
      class="switcher-handle"
    />
  </div>
  <span
    class="switcher-label"
  >
    Switch
  </span>
</div>
`;
